--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ img {
 
 ul { 
   margin: 0;
+  list-style-type: none;
   
 }
 
@@ -30,7 +31,21 @@ a {
   color: currentColor;
 }
 
+
+
 /* basic reset */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 .container {
   max-width: 1158px;
@@ -40,6 +55,14 @@ a {
   margin-left: auto;
 }
 /* header */
+
+.container-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #e7e9fc;
+}
+
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -52,6 +75,14 @@ a {
 
 .header-logo-color {
   color: #2e2f42;
+}
+
+.header-list-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+  padding: 24px;
 }
 
 .header-link-nav {
@@ -69,6 +100,14 @@ a {
 
 .header-address {
   font-style: normal;
+}
+
+.header-list-address {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+
 }
 
 .header-address-link {
@@ -90,6 +129,16 @@ a {
   background-color: #2e2f42;
 }
 
+.container-hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 188px 317px;
+
+
+}
+
 .section-hero-title {
   font-weight: 700;
   font-size: 56px;
@@ -97,16 +146,22 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  margin-bottom: 48px;
 }
 
 .section-hero-button {
   background-color: #4d5ae5;
+  border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
   cursor: pointer;
+  margin: 0 auto;
 }
 
 .section-hero-button:hover,
@@ -116,12 +171,24 @@ a {
 /* section-hero */
 
 /* section-Feature */
+
+.container-feature {
+ 
+}
+
 .section-feature-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+
+.section-feature-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 24px;
 }
 
 .section-feature-text {
