--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ a {
 /* section-Feature */
 
 .container-feature {
- 
+ padding: 120px 0;
 }
 
 .section-feature-title {
@@ -182,6 +182,7 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .section-feature-list {
@@ -201,9 +202,19 @@ a {
 /* section-Feature */
 
 /* section-team */
+.container-team {
+padding: 120px 0;
+}
 
 .section-team {
   background-color: #f4f4fd;
+}
+
+.section-team-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 24px;
 }
 
 .section-team-item {
@@ -218,6 +229,7 @@ a {
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
 
 .section-team-subtitle {
