--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ img {
   display: block;
 }
 
-ul { 
+ul {
+  padding: 0; 
   margin: 0;
   list-style-type: none;
   
@@ -220,6 +221,7 @@ padding: 120px 15px;
 .section-team-item {
   background-color: #ffffff;
   padding-bottom: 32px;
+  width: calc((100% - 24px * 3)/3);
 }
 
 .section-team-title {
