--- a/css/style.css
+++ b/css/style.css
@@ -146,28 +146,28 @@ header {
   background-color: #2e2f42;
 }
 
-.container-hero {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 188px 317px;
-
+.container-hero { 
+padding-top: 188px;
+padding-bottom: 188px;
 
 }
 
 .section-hero-title {
+  max-width: 496px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  text-align: center;
+  text-align: centergi;
   color: #fff;
+  margin-right: auto;
+  margin-left: auto;
   margin-bottom: 48px;
 }
 
 .section-hero-button {
   background-color: #4d5ae5;
+  display: block;
   border-radius: 4px;
   border: none;
   padding: 16px 32px;
