--- a/css/style.css
+++ b/css/style.css
@@ -57,9 +57,8 @@ a {
 }
 /* header */
 
-header { 
-
-  border-bottom: 1px solid #e7e9fc;
+header {
+border-bottom: 1px solid #e7e9fc;
 }
 
 .logo-header {
@@ -98,16 +97,15 @@ header {
   gap: 40px;
 } 
 
-.header-nav-item {
-  padding: 24px 0;
-}
-
-.header-link-nav {
+.header-link-nav { 
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding: 24px 0;
+  
 }
 
 .header-link-nav:hover,
@@ -332,12 +330,9 @@ header {
 
 /* section-footer */
 
-.container-footer {
+.footer { 
   padding-top: 100px;
   padding-bottom: 100px;
-}
-
-.footer {
   background-color: #2e2f42;
 }
 
