--- a/css/style.css
+++ b/css/style.css
@@ -257,10 +257,6 @@ border-bottom: 1px solid #e7e9fc;
   margin-bottom: 32px;
 }
 
-.team-card-title {
-  padding: 32px 0
-}
-
 .section-team-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -283,7 +279,7 @@ border-bottom: 1px solid #e7e9fc;
 /* section-team */
 
 /* section-portfolio */
-.container-portfolio {
+.section-portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -295,6 +291,7 @@ border-bottom: 1px solid #e7e9fc;
   align-items: center;
   gap: 24px;
   flex-wrap: wrap;
+  row-gap: 48px;
 
 
 }
@@ -310,12 +307,20 @@ border-bottom: 1px solid #e7e9fc;
   margin-bottom: 72px;
 }
 
+.portfolio-subtitle-container {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+}
+
 .section-portfolio-subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .section-portfolio-text {
