--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,34 @@
+:root {
+  --logo-color: #4d5ae5;
+  --hover-color: #404bbf;
+  --title-subtitle: #2e2f42;
+  --green: #31d0aa;
+  --text-color: #434455;
+  --light-slate: #8e8f99;
+  --border-color: #e7e9fc;
+  --text-white: #f4f4fd;
+  --navy-blue-modal: rgba(46, 47, 66, 0.4);
+  --grey: rgba(46, 47, 66, 0.7);
+  --white-color: #fff;
+  --dairy: #fcfcfc;
+}
+
+:root {
+  --font-family: "Roboto", sans-serif;
+  --second-family: "Raleway", sans-serif;
+}
+
+
+
 /* basic reset */
+
+
+
+
 body {
-  font-family: 'Roboto', sans-serif;
-  background-color: #ffffff;
-  color: #434455;
+  font-family: var(--font-family);
+  background-color: var(--white-color);
+  color: var(--text-color);
 }
 
 h1,
@@ -58,7 +84,7 @@ a {
 /* header */
 
 header {
-border-bottom: 1px solid #e7e9fc;
+border-bottom: 1px solid var(--border-color);
 }
 
 .logo-header {
@@ -69,21 +95,21 @@ border-bottom: 1px solid #e7e9fc;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .logo {
-  font-family: 'Raleway', sans-serif;
+  font-family: var(--second-family);
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: var(--logo-color);
 }
 
 .header-logo-color {
-  color: #2e2f42;
+  color: var(--title-subtitle);
 }
 
 .header-nav {
@@ -103,14 +129,14 @@ border-bottom: 1px solid #e7e9fc;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--title-subtitle);
   padding: 24px 0;
   
 }
 
 .header-link-nav:hover,
 .header-link-nav:focus {
-  color: #404bbf;
+  color: var(--hover-color);
 }
 
 .header-address {
@@ -130,18 +156,18 @@ border-bottom: 1px solid #e7e9fc;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--text-color);
 }
 
 .header-address-link:hover,
 .header-address-link:focus {
-  color: #404bbf;
+  color: var(--hover-color);
 }
 /* header */
 
 /* section-hero */
 .section-hero {
-  background-color: #2e2f42;
+  background-color: var(--title-subtitle);
   padding-top: 188px;
   padding-bottom: 188px;
 }
@@ -154,7 +180,7 @@ border-bottom: 1px solid #e7e9fc;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: centergi;
-  color: #fff;
+  color: var(--white-color);
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 48px;
@@ -179,7 +205,7 @@ border-bottom: 1px solid #e7e9fc;
 
 .section-hero-button:hover,
 .section-hero-button:focus {
-  background-color: #404bbf;
+  background-color: var(--hover-color);
 }
 /* section-hero */
 
@@ -194,7 +220,7 @@ border-bottom: 1px solid #e7e9fc;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--title-subtitle);
   margin-bottom: 8px;
 }
 
@@ -221,7 +247,7 @@ border-bottom: 1px solid #e7e9fc;
 /* section-team */
 
 .section-team {
-  background-color: #f4f4fd;
+  background-color: var(--text-white);
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -234,7 +260,7 @@ border-bottom: 1px solid #e7e9fc;
 }
 
 .section-team-item {
-  background-color: #ffffff;
+  background-color: var(--white-color);
   width: calc((100% - 24px * 3)/3);
   border-radius: 0 0 4px 4px;
   padding: 0px 0px 32px 0px;
@@ -249,7 +275,7 @@ border-bottom: 1px solid #e7e9fc;
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
-  color: #2e2f42;
+  color: var(--title-subtitle);
   margin-bottom: 72px;
 }
 
@@ -268,7 +294,7 @@ border-bottom: 1px solid #e7e9fc;
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #2e2f42;
+  color: var(--title-subtitle);
   margin-bottom: 8px;
 }
 
@@ -278,7 +304,7 @@ border-bottom: 1px solid #e7e9fc;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #434455;
+  color: var(--text-color);
 }
 
 /* section-team */
@@ -308,14 +334,14 @@ border-bottom: 1px solid #e7e9fc;
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
-  color: #2e2f42;
+  color: var(--title-subtitle);
   margin-bottom: 72px;
 }
 
 .portfolio-subtitle-container {
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
+  border-bottom: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
   padding: 32px 16px;
 }
 
@@ -324,7 +350,7 @@ border-bottom: 1px solid #e7e9fc;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--title-subtitle);
   margin-bottom: 8px;
 }
 
@@ -333,7 +359,7 @@ border-bottom: 1px solid #e7e9fc;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--text-color);
 }
 
 /* section-portfolio */
@@ -343,7 +369,7 @@ border-bottom: 1px solid #e7e9fc;
 .footer { 
   padding-top: 100px;
   padding-bottom: 100px;
-  background-color: #2e2f42;
+  background-color: var(--title-subtitle);
 }
 
 .footer-text {
@@ -352,7 +378,7 @@ border-bottom: 1px solid #e7e9fc;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
+  color: var(--text-white);
 }
 
 .logo-footer {
@@ -361,6 +387,6 @@ border-bottom: 1px solid #e7e9fc;
 }
 
 .footer-logo-color {
-  color: #f4f4fd;
+  color: var(--text-white);
 }
 /* section-footer */
